--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <div id="top">
       
         <header>            
-            <h1 class="head_title"><a class="link" href="../top_page/index.html">天文部</a></h1>
-            <a class="for_member" href="../for_member/index.html">部員向け</a>
+            <h1 class="head_title"><a class="link" href="index.html">天文部</a></h1>
+            <a class="for_member" href="for_member/index.html">部員向け</a>
             <a class="kibousya" href="https://docs.google.com/forms/d/1yEKQDrH2Rg3jT3xBfc6GRevokw228_ZYlrcY2LzV1sw/edit">入部希望</a>
-            <a class="member_introduction" href="../member_introduction/index.html">部員紹介</a>
+            <a class="member_introduction" href="member_introduction/index.html">部員紹介</a>
         </header>
 
         <div class="main">
             <div class="content1">
-                <img class="background-image" src="../HP_Photo/univ2.jpeg">
+                <img class="background-image" src="HP_Photo/univ2.jpeg">
                 <h1 class=" main-title">
                     <span class="large">A</span>izu<br>
                     <span class="large">A</span>stronomy<br>
@@ -30,7 +30,7 @@
                 </h1>
             </div>
             <div class="content2">
-                <img class="background-image" src="../HP_Photo/屋上.jpeg" width="75%">
+                <img class="background-image" src="HP_Photo/屋上.jpeg" width="75%">
                 <p>天文部では、ゆる〜く天体観測をしようと思います。研究棟屋上に設置されている望遠鏡を用いたり、会津各地の星が見やすい場所に移動するつもりです。また、メンバーの仲を深めるためのイベント(新歓やBBQ等)もしたいと思っています。</p>
             </div>
 
