--- a/for_member/index.html
+++ b/for_member/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>            
-            <h1 class="head_title"><a class="link" href="../top_page/index.html">天文部</a></h1>
+            <h1 class="head_title"><a class="link" href="../index.html">天文部</a></h1>
             <a class="for_member" href="../for_member/index.html">部員向け</a>
             <a class="kibousya" href="https://docs.google.com/forms/d/1yEKQDrH2Rg3jT3xBfc6GRevokw228_ZYlrcY2LzV1sw/edit">入部希望</a>
             <a class="member_introduction" href="../member_introduction/index.html">部員紹介</a>
@@ -21,7 +21,7 @@
 
     <div class="main">
         <h1 class="title">部員向けページ</h1>
-        <a class="やりたいことリスト" href="/Users/js_air/Downloads/University/サークル/天文部/HP/やりたいことリスト/index.html">やりたいことリスト</a>
+        <a class="やりたいことリスト" href="../やりたいことリスト/index.html">やりたいことリスト</a>
         <a class="schedule" href="https://calendar.google.com/calendar/embed?src=ev85l6ob76a2lrb1s68tasrmuk%40group.calendar.google.com&ctz=Asia%2FTokyo">年間スケジュール</a>
         <a class="activityRecord" href="">活動記録</a>
         <div class="sns_btn">
