--- a/member_introduction/index.html
+++ b/member_introduction/index.html
@@ -14,7 +14,7 @@
     <div id="introduction">
         
         <header>            
-            <h1 class="head_title"><a class="link" href="../top_page/index.html">天文部</a></h1>
+            <h1 class="head_title"><a class="link" href="../index.html">天文部</a></h1>
             <a class="for_member" href="../for_member/index.html">部員向け</a>
             <a class="kibousya" href="https://docs.google.com/forms/d/1yEKQDrH2Rg3jT3xBfc6GRevokw228_ZYlrcY2LzV1sw/edit">入部希望</a>
             <a class="member_introduction" href="../member_introduction/index.html">部員紹介</a>
