--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       
         <header>            
             <h1 class="head_title"><a class="link" href="index.html">天文部</a></h1>
-            <a class="for_member" href="../for_member/index.html">部員向け</a>
+            <a class="for_member" href="for_member/index.html">部員向け</a>
             <a class="kibousya" href="https://docs.google.com/forms/d/1yEKQDrH2Rg3jT3xBfc6GRevokw228_ZYlrcY2LzV1sw/edit">入部希望</a>
-            <a class="member_introduction" href="../member_introduction/index.html">部員紹介</a>
+            <a class="member_introduction" href="member_introduction/index.html">部員紹介</a>
         </header>
 
         <div class="main">
