--- a/for_member/index.html
+++ b/for_member/index.html
@@ -27,7 +27,7 @@
         <div class="sns_btn">
             <a href="https://instagram.com/aizu_astro" class="flowbtn8 insta_btn2"><i class="fab fa-instagram"></i></a>
             <a href="https://twitter.com/aizu_astro" class="flowbtn8 fl_tw2"><i class="fab fa-twitter"></i></a>
-            <a href="s1280167@u-aizu.ac.jp" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
+            <a href="mailto:s1280167@u-aizu.ac.jp" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
         </div>
     </div>
 
