--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="main">
             <div class="content1">
-                <img class="background-image" src="HP_Photo/univ2.jpeg">
+                <img class="background-image1" src="HP_Photo/univ2.jpeg">
                 <h1 class=" main-title">
                     <span class="large">A</span>izu<br>
                     <span class="large">A</span>stronomy<br>
@@ -30,14 +30,14 @@
                 </h1>
             </div>
             <div class="content2">
-                <img class="background-image" src="HP_Photo/屋上.jpeg" width="75%">
+                <img class="background-image2" src="HP_Photo/屋上.jpeg" width="75%">
                 <p>天文部では、ゆる〜く天体観測をしようと思います。研究棟屋上に設置されている望遠鏡を用いたり、会津各地の星が見やすい場所に移動するつもりです。また、メンバーの仲を深めるためのイベント(新歓やBBQ等)もしたいと思っています。</p>
             </div>
 
             <div class="sns_btn">
                 <a href="https://instagram.com/aizu_astro" class="flowbtn8 insta_btn2"><i class="fab fa-instagram"></i></a>
                 <a href="https://twitter.com/aizu_astro" class="flowbtn8 fl_tw2"><i class="fab fa-twitter"></i></a>
-                <a href="s1280167@u-aizu.ac.jp" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
+                <a href="mailto:s1280167@u-aizu.ac.jp" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
             </div>
         </div>
 
