--- a/for_member/index.html
+++ b/for_member/index.html
@@ -11,32 +11,39 @@
 </head>
 
 <body>
+    <div id="for_member">
+        <header>            
+            <h1 class="head_title"><a class="link" href="../index.html">天文部</a></h1> 
+                <div class="hamburger_menu">
+                <button class ="hamburger_btn" @click= "hamburger = !hamburger">Menu</button>
+                <template v-if="hamburger">
+                    <ul class="menu_list">
+                        <a class="for_member" href="index.html">部員向け</a><br>
+                        <a class="kibousya" :href="url_kibousya">入部希望</a><br>
+                        <a class="record" href="../record/index.html">活動記録</a><br>
+                    </ul>
+                </template>                  
+            </div>
+        </header>
 
-    <header>            
-            <h1 class="head_title"><a class="link" href="../index.html">天文部</a></h1>
-            <a class="for_member" href="../for_member/index.html">部員向け</a>
-            <a class="kibousya" href="https://docs.google.com/forms/d/1yEKQDrH2Rg3jT3xBfc6GRevokw228_ZYlrcY2LzV1sw/edit">入部希望</a>
-            <a class="member_introduction" href="../member_introduction/index.html">部員紹介</a>
-    </header>
-
-    <div class="main">
-        <h1 class="title">部員向けページ</h1>
-        <a class="やりたいことリスト" href="../やりたいことリスト/index.html">やりたいことリスト</a>
-        <a class="schedule" href="https://calendar.google.com/calendar/embed?src=ev85l6ob76a2lrb1s68tasrmuk%40group.calendar.google.com&ctz=Asia%2FTokyo">年間スケジュール</a>
-        <a class="activityRecord" href="">活動記録</a>
-        <div class="sns_btn">
-            <a href="https://instagram.com/aizu_astro" class="flowbtn8 insta_btn2"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/aizu_astro" class="flowbtn8 fl_tw2"><i class="fab fa-twitter"></i></a>
-            <a href="mailto:s1280167@u-aizu.ac.jp" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
+        <div class="main">
+            <h1 class="title">部員向けページ</h1>
+            <a class="やりたいことリスト" href="../やりたいことリスト/index.html">やりたいことリスト</a>
+            <a class="schedule" href="https://calendar.google.com/calendar/embed?src=ev85l6ob76a2lrb1s68tasrmuk%40group.calendar.google.com&ctz=Asia%2FTokyo">年間スケジュール</a>
+            <a class="activityRecord" href="">活動記録</a>
+            <div class="sns_btn">
+                <a href="https://instagram.com/aizu_astro" class="flowbtn8 insta_btn2"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/aizu_astro" class="flowbtn8 fl_tw2"><i class="fab fa-twitter"></i></a>
+                <a href="mailto:s1280167@u-aizu.ac.jp" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
+            </div>
         </div>
+
+        <footer>    
+            <h1 class=" foot-title">天文部</h1>
+        </footer>
     </div>
-
-    <footer>    
-        <h1 class=" foot-title">天文部</h1>
-    </footer>
-
     <script src="vue.js"></script>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
