--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -14,10 +15,17 @@
     <div id="top">
       
         <header>            
-            <h1 class="head_title"><a class="link" href="index.html">天文部</a></h1>
-            <a class="for_member" href="for_member/index.html">部員向け</a>
-            <a class="kibousya" href="https://docs.google.com/forms/d/1yEKQDrH2Rg3jT3xBfc6GRevokw228_ZYlrcY2LzV1sw/edit">入部希望</a>
-            <a class="member_introduction" href="member_introduction/index.html">部員紹介</a>
+            <h1 class="head_title"><a class="link" href="index.html">天文部</a></h1> 
+                <div class="hamburger_menu">
+                <button class ="hamburger_btn" @click= "hamburger = !hamburger">Menu</button>
+                <template v-if="hamburger">
+                    <ul class="menu_list">
+                        <a class="for_member" href="for_member/index.html">部員向け</a><br>
+                        <a class="kibousya" :href="url_kibousya">入部希望</a><br>
+                        <a class="record" href="record/index.html">活動記録</a><br>
+                    </ul>
+                </template>                  
+            </div>
         </header>
 
         <div class="main">
@@ -29,15 +37,25 @@
                     <span class="large">C</span>lub
                 </h1>
             </div>
+
+            <p class="devided_line">-----------------------------------------------------------------</p>
+
             <div class="content2">
-                <img class="background-image2" src="HP_Photo/屋上.jpeg" width="75%">
+                <img class="background-image2" src="HP_Photo/屋上.jpeg">
                 <p>天文部では、ゆる〜く天体観測をしようと思います。研究棟屋上に設置されている望遠鏡を用いたり、会津各地の星が見やすい場所に移動するつもりです。また、メンバーの仲を深めるためのイベント(新歓やBBQ等)もしたいと思っています。</p>
             </div>
 
+            <p class="devided_line">-----------------------------------------------------------------</p>
+
+            <div class="content3">
+                <p>天文部の活動として、遠征(旅行)にも行く予定です。まだ場所は未定ですが、長野県に行きたいという意見が多いので部員で話し合った上で場所を決めようと思います。</p>
+                <img class="background-image3" src="HP_Photo/mirror.png">
+            </div>
+
             <div class="sns_btn">
-                <a href="https://instagram.com/aizu_astro" class="flowbtn8 insta_btn2"><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/aizu_astro" class="flowbtn8 fl_tw2"><i class="fab fa-twitter"></i></a>
-                <a href="mailto:s1280167@u-aizu.ac.jp" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
+                <a :href="url_instagram" class="flowbtn8 insta_btn2"><i class="fab fa-instagram"></i></a>
+                <a :href="url_twitter" class="flowbtn8 fl_tw2"><i class="fab fa-twitter"></i></a>
+                <a :href="mail_address" class="flowbtn8 fl_ma2"><i class="far fa-envelope"></i></a>
             </div>
         </div>
 
@@ -47,7 +65,7 @@
 
     </div>
                 <script src="vue.js"></script>
-                <script src="index.js"></script>
+                <script src="script.js"></script>
 </body>
 
 </html>
